parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> declaraciones chequeos prints
Rule 2     empty -> <empty>
Rule 3     declaraciones -> empty
Rule 4     declaraciones -> declaraciones declaracion
Rule 5     declaracion -> FUN LOWERID signatura precondicion postcondicion reglas
Rule 6     signatura -> empty
Rule 7     signatura -> COLON parametros ARROW parametro  [precedence=left, level=2]
Rule 8     precondicion -> QUESTION formulaImpOrAndNeg
Rule 9     precondicion -> empty
Rule 10    postcondicion -> BANG formulaImpOrAndNeg
Rule 11    postcondicion -> empty
Rule 12    chequeos -> empty
Rule 13    chequeos -> chequeos chequeo
Rule 14    chequeo -> CHECK formulaImpOrAndNeg
Rule 15    prints -> empty
Rule 16    prints -> prints prnt
Rule 17    prnt -> PRINT expresion
Rule 18    parametros -> parametros COMMA parametros  [precedence=left, level=1]
Rule 19    parametros -> parametro
Rule 20    parametros -> empty
Rule 21    parametro -> LOWERID
Rule 22    parametro -> UNDERSCORE
Rule 23    reglas -> reglas regla
Rule 24    reglas -> empty
Rule 25    regla -> patrones ARROW expresion  [precedence=left, level=2]
Rule 26    patrones -> patrones COMMA patrones  [precedence=left, level=1]
Rule 27    patrones -> patron
Rule 28    patrones -> empty
Rule 29    patron -> UPPERID LPAREN patrones RPAREN
Rule 30    patron -> UPPERID
Rule 31    patron -> LOWERID
Rule 32    patron -> UNDERSCORE
Rule 33    expresion -> LOWERID LPAREN expresiones RPAREN
Rule 34    expresion -> UPPERID LPAREN expresiones RPAREN
Rule 35    expresion -> UPPERID
Rule 36    expresion -> LOWERID
Rule 37    expresiones -> expresiones COMMA expresiones  [precedence=left, level=1]
Rule 38    expresiones -> expresion
Rule 39    expresiones -> empty
Rule 40    formulaNeg -> LPAREN formulaImpOrAndNeg RPAREN
Rule 41    formulaNeg -> NOT formulaNeg
Rule 42    formulaNeg -> formulaAtomica
Rule 43    formulaAndNeg -> formulaNeg AND formulaAndNeg
Rule 44    formulaAndNeg -> formulaNeg
Rule 45    formulaOrAndNeg -> formulaAndNeg
Rule 46    formulaOrAndNeg -> formulaAndNeg OR formulaOrAndNeg
Rule 47    formulaImpOrAndNeg -> formulaOrAndNeg
Rule 48    formulaImpOrAndNeg -> formulaOrAndNeg IMP formulaImpOrAndNeg
Rule 49    formulaAtomica -> expresion EQ expresion
Rule 50    formulaAtomica -> expresion
Rule 51    formulaAtomica -> FALSE
Rule 52    formulaAtomica -> TRUE

Terminals, with rules where they appear:

AND                  : 43
ARROW                : 7 25
BANG                 : 10
CHECK                : 14
COLON                : 7
COMMA                : 18 26 37
EQ                   : 49
FALSE                : 51
FUN                  : 5
IMP                  : 48
LOWERID              : 5 21 31 33 36
LPAREN               : 29 33 34 40
NOT                  : 41
OR                   : 46
PRINT                : 17
QUESTION             : 8
RPAREN               : 29 33 34 40
TRUE                 : 52
UNDERSCORE           : 22 32
UPPERID              : 29 30 34 35
error                : 

Nonterminals, with rules where they appear:

chequeo              : 13
chequeos             : 1 13
declaracion          : 4
declaraciones        : 1 4
empty                : 3 6 9 11 12 15 20 24 28 39
expresion            : 17 25 38 49 49 50
expresiones          : 33 34 37 37
formulaAndNeg        : 43 45 46
formulaAtomica       : 42
formulaImpOrAndNeg   : 8 10 14 40 48
formulaNeg           : 41 43 44
formulaOrAndNeg      : 46 47 48
parametro            : 7 19
parametros           : 7 18 18
patron               : 27
patrones             : 25 26 26 29
postcondicion        : 5
precondicion         : 5
prints               : 1 16
prnt                 : 16
program              : 0
regla                : 23
reglas               : 5 23
signatura            : 5


state 0

    (0) S' -> . program
    (1) program -> . declaraciones chequeos prints
    (3) declaraciones -> . empty
    (4) declaraciones -> . declaraciones declaracion
    (2) empty -> .
    FUN             reduce using rule 2 (empty -> .)
    CHECK           reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)

    program                        shift and go to state 1
    declaraciones                  shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .


state 2

    (1) program -> declaraciones . chequeos prints
    (4) declaraciones -> declaraciones . declaracion
    (12) chequeos -> . empty
    (13) chequeos -> . chequeos chequeo
    (5) declaracion -> . FUN LOWERID signatura precondicion postcondicion reglas
    (2) empty -> .
    FUN             shift and go to state 7
    CHECK           reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)

    chequeos                       shift and go to state 4
    declaracion                    shift and go to state 5
    empty                          shift and go to state 6

state 3

    (3) declaraciones -> empty .
    FUN             reduce using rule 3 (declaraciones -> empty .)
    CHECK           reduce using rule 3 (declaraciones -> empty .)
    PRINT           reduce using rule 3 (declaraciones -> empty .)
    $end            reduce using rule 3 (declaraciones -> empty .)


state 4

    (1) program -> declaraciones chequeos . prints
    (13) chequeos -> chequeos . chequeo
    (15) prints -> . empty
    (16) prints -> . prints prnt
    (14) chequeo -> . CHECK formulaImpOrAndNeg
    (2) empty -> .
    CHECK           shift and go to state 11
    PRINT           reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)

    prints                         shift and go to state 8
    chequeo                        shift and go to state 9
    empty                          shift and go to state 10

state 5

    (4) declaraciones -> declaraciones declaracion .
    FUN             reduce using rule 4 (declaraciones -> declaraciones declaracion .)
    CHECK           reduce using rule 4 (declaraciones -> declaraciones declaracion .)
    PRINT           reduce using rule 4 (declaraciones -> declaraciones declaracion .)
    $end            reduce using rule 4 (declaraciones -> declaraciones declaracion .)


state 6

    (12) chequeos -> empty .
    CHECK           reduce using rule 12 (chequeos -> empty .)
    PRINT           reduce using rule 12 (chequeos -> empty .)
    $end            reduce using rule 12 (chequeos -> empty .)


state 7

    (5) declaracion -> FUN . LOWERID signatura precondicion postcondicion reglas
    LOWERID         shift and go to state 12


state 8

    (1) program -> declaraciones chequeos prints .
    (16) prints -> prints . prnt
    (17) prnt -> . PRINT expresion
    $end            reduce using rule 1 (program -> declaraciones chequeos prints .)
    PRINT           shift and go to state 14

    prnt                           shift and go to state 13

state 9

    (13) chequeos -> chequeos chequeo .
    CHECK           reduce using rule 13 (chequeos -> chequeos chequeo .)
    PRINT           reduce using rule 13 (chequeos -> chequeos chequeo .)
    $end            reduce using rule 13 (chequeos -> chequeos chequeo .)


state 10

    (15) prints -> empty .
    PRINT           reduce using rule 15 (prints -> empty .)
    $end            reduce using rule 15 (prints -> empty .)


state 11

    (14) chequeo -> CHECK . formulaImpOrAndNeg
    (47) formulaImpOrAndNeg -> . formulaOrAndNeg
    (48) formulaImpOrAndNeg -> . formulaOrAndNeg IMP formulaImpOrAndNeg
    (45) formulaOrAndNeg -> . formulaAndNeg
    (46) formulaOrAndNeg -> . formulaAndNeg OR formulaOrAndNeg
    (43) formulaAndNeg -> . formulaNeg AND formulaAndNeg
    (44) formulaAndNeg -> . formulaNeg
    (40) formulaNeg -> . LPAREN formulaImpOrAndNeg RPAREN
    (41) formulaNeg -> . NOT formulaNeg
    (42) formulaNeg -> . formulaAtomica
    (49) formulaAtomica -> . expresion EQ expresion
    (50) formulaAtomica -> . expresion
    (51) formulaAtomica -> . FALSE
    (52) formulaAtomica -> . TRUE
    (33) expresion -> . LOWERID LPAREN expresiones RPAREN
    (34) expresion -> . UPPERID LPAREN expresiones RPAREN
    (35) expresion -> . UPPERID
    (36) expresion -> . LOWERID
    LPAREN          shift and go to state 19
    NOT             shift and go to state 20
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    LOWERID         shift and go to state 25
    UPPERID         shift and go to state 26

    formulaImpOrAndNeg             shift and go to state 15
    formulaOrAndNeg                shift and go to state 16
    formulaAndNeg                  shift and go to state 17
    formulaNeg                     shift and go to state 18
    formulaAtomica                 shift and go to state 21
    expresion                      shift and go to state 22

state 12

    (5) declaracion -> FUN LOWERID . signatura precondicion postcondicion reglas
    (6) signatura -> . empty
    (7) signatura -> . COLON parametros ARROW parametro
    (2) empty -> .
    COLON           shift and go to state 29
    QUESTION        reduce using rule 2 (empty -> .)
    BANG            reduce using rule 2 (empty -> .)
    UPPERID         reduce using rule 2 (empty -> .)
    LOWERID         reduce using rule 2 (empty -> .)
    UNDERSCORE      reduce using rule 2 (empty -> .)
    ARROW           reduce using rule 2 (empty -> .)
    COMMA           reduce using rule 2 (empty -> .)
    FUN             reduce using rule 2 (empty -> .)
    CHECK           reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)

    signatura                      shift and go to state 27
    empty                          shift and go to state 28

state 13

    (16) prints -> prints prnt .
    PRINT           reduce using rule 16 (prints -> prints prnt .)
    $end            reduce using rule 16 (prints -> prints prnt .)


state 14

    (17) prnt -> PRINT . expresion
    (33) expresion -> . LOWERID LPAREN expresiones RPAREN
    (34) expresion -> . UPPERID LPAREN expresiones RPAREN
    (35) expresion -> . UPPERID
    (36) expresion -> . LOWERID
    LOWERID         shift and go to state 25
    UPPERID         shift and go to state 26

    expresion                      shift and go to state 30

state 15

    (14) chequeo -> CHECK formulaImpOrAndNeg .
    CHECK           reduce using rule 14 (chequeo -> CHECK formulaImpOrAndNeg .)
    PRINT           reduce using rule 14 (chequeo -> CHECK formulaImpOrAndNeg .)
    $end            reduce using rule 14 (chequeo -> CHECK formulaImpOrAndNeg .)


state 16

    (47) formulaImpOrAndNeg -> formulaOrAndNeg .
    (48) formulaImpOrAndNeg -> formulaOrAndNeg . IMP formulaImpOrAndNeg
    CHECK           reduce using rule 47 (formulaImpOrAndNeg -> formulaOrAndNeg .)
    PRINT           reduce using rule 47 (formulaImpOrAndNeg -> formulaOrAndNeg .)
    $end            reduce using rule 47 (formulaImpOrAndNeg -> formulaOrAndNeg .)
    RPAREN          reduce using rule 47 (formulaImpOrAndNeg -> formulaOrAndNeg .)
    BANG            reduce using rule 47 (formulaImpOrAndNeg -> formulaOrAndNeg .)
    UPPERID         reduce using rule 47 (formulaImpOrAndNeg -> formulaOrAndNeg .)
    LOWERID         reduce using rule 47 (formulaImpOrAndNeg -> formulaOrAndNeg .)
    UNDERSCORE      reduce using rule 47 (formulaImpOrAndNeg -> formulaOrAndNeg .)
    ARROW           reduce using rule 47 (formulaImpOrAndNeg -> formulaOrAndNeg .)
    COMMA           reduce using rule 47 (formulaImpOrAndNeg -> formulaOrAndNeg .)
    FUN             reduce using rule 47 (formulaImpOrAndNeg -> formulaOrAndNeg .)
    IMP             shift and go to state 31


state 17

    (45) formulaOrAndNeg -> formulaAndNeg .
    (46) formulaOrAndNeg -> formulaAndNeg . OR formulaOrAndNeg
    IMP             reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    CHECK           reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    PRINT           reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    $end            reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    RPAREN          reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    BANG            reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    UPPERID         reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    LOWERID         reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    UNDERSCORE      reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    ARROW           reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    COMMA           reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    FUN             reduce using rule 45 (formulaOrAndNeg -> formulaAndNeg .)
    OR              shift and go to state 32


state 18

    (43) formulaAndNeg -> formulaNeg . AND formulaAndNeg
    (44) formulaAndNeg -> formulaNeg .
    AND             shift and go to state 33
    OR              reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    IMP             reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    CHECK           reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    PRINT           reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    $end            reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    RPAREN          reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    BANG            reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    UPPERID         reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    LOWERID         reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    UNDERSCORE      reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    ARROW           reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    COMMA           reduce using rule 44 (formulaAndNeg -> formulaNeg .)
    FUN             reduce using rule 44 (formulaAndNeg -> formulaNeg .)


state 19

    (40) formulaNeg -> LPAREN . formulaImpOrAndNeg RPAREN
    (47) formulaImpOrAndNeg -> . formulaOrAndNeg
    (48) formulaImpOrAndNeg -> . formulaOrAndNeg IMP formulaImpOrAndNeg
    (45) formulaOrAndNeg -> . formulaAndNeg
    (46) formulaOrAndNeg -> . formulaAndNeg OR formulaOrAndNeg
    (43) formulaAndNeg -> . formulaNeg AND formulaAndNeg
    (44) formulaAndNeg -> . formulaNeg
    (40) formulaNeg -> . LPAREN formulaImpOrAndNeg RPAREN
    (41) formulaNeg -> . NOT formulaNeg
    (42) formulaNeg -> . formulaAtomica
    (49) formulaAtomica -> . expresion EQ expresion
    (50) formulaAtomica -> . expresion
    (51) formulaAtomica -> . FALSE
    (52) formulaAtomica -> . TRUE
    (33) expresion -> . LOWERID LPAREN expresiones RPAREN
    (34) expresion -> . UPPERID LPAREN expresiones RPAREN
    (35) expresion -> . UPPERID
    (36) expresion -> . LOWERID
    LPAREN          shift and go to state 19
    NOT             shift and go to state 20
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    LOWERID         shift and go to state 25
    UPPERID         shift and go to state 26

    formulaImpOrAndNeg             shift and go to state 34
    formulaOrAndNeg                shift and go to state 16
    formulaAndNeg                  shift and go to state 17
    formulaNeg                     shift and go to state 18
    formulaAtomica                 shift and go to state 21
    expresion                      shift and go to state 22

state 20

    (41) formulaNeg -> NOT . formulaNeg
    (40) formulaNeg -> . LPAREN formulaImpOrAndNeg RPAREN
    (41) formulaNeg -> . NOT formulaNeg
    (42) formulaNeg -> . formulaAtomica
    (49) formulaAtomica -> . expresion EQ expresion
    (50) formulaAtomica -> . expresion
    (51) formulaAtomica -> . FALSE
    (52) formulaAtomica -> . TRUE
    (33) expresion -> . LOWERID LPAREN expresiones RPAREN
    (34) expresion -> . UPPERID LPAREN expresiones RPAREN
    (35) expresion -> . UPPERID
    (36) expresion -> . LOWERID
    LPAREN          shift and go to state 19
    NOT             shift and go to state 20
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    LOWERID         shift and go to state 25
    UPPERID         shift and go to state 26

    formulaNeg                     shift and go to state 35
    formulaAtomica                 shift and go to state 21
    expresion                      shift and go to state 22

state 21

    (42) formulaNeg -> formulaAtomica .
    AND             reduce using rule 42 (formulaNeg -> formulaAtomica .)
    OR              reduce using rule 42 (formulaNeg -> formulaAtomica .)
    IMP             reduce using rule 42 (formulaNeg -> formulaAtomica .)
    CHECK           reduce using rule 42 (formulaNeg -> formulaAtomica .)
    PRINT           reduce using rule 42 (formulaNeg -> formulaAtomica .)
    $end            reduce using rule 42 (formulaNeg -> formulaAtomica .)
    RPAREN          reduce using rule 42 (formulaNeg -> formulaAtomica .)
    BANG            reduce using rule 42 (formulaNeg -> formulaAtomica .)
    UPPERID         reduce using rule 42 (formulaNeg -> formulaAtomica .)
    LOWERID         reduce using rule 42 (formulaNeg -> formulaAtomica .)
    UNDERSCORE      reduce using rule 42 (formulaNeg -> formulaAtomica .)
    ARROW           reduce using rule 42 (formulaNeg -> formulaAtomica .)
    COMMA           reduce using rule 42 (formulaNeg -> formulaAtomica .)
    FUN             reduce using rule 42 (formulaNeg -> formulaAtomica .)


state 22

    (49) formulaAtomica -> expresion . EQ expresion
    (50) formulaAtomica -> expresion .
    EQ              shift and go to state 36
    AND             reduce using rule 50 (formulaAtomica -> expresion .)
    OR              reduce using rule 50 (formulaAtomica -> expresion .)
    IMP             reduce using rule 50 (formulaAtomica -> expresion .)
    CHECK           reduce using rule 50 (formulaAtomica -> expresion .)
    PRINT           reduce using rule 50 (formulaAtomica -> expresion .)
    $end            reduce using rule 50 (formulaAtomica -> expresion .)
    RPAREN          reduce using rule 50 (formulaAtomica -> expresion .)
    BANG            reduce using rule 50 (formulaAtomica -> expresion .)
    UPPERID         reduce using rule 50 (formulaAtomica -> expresion .)
    LOWERID         reduce using rule 50 (formulaAtomica -> expresion .)
    UNDERSCORE      reduce using rule 50 (formulaAtomica -> expresion .)
    ARROW           reduce using rule 50 (formulaAtomica -> expresion .)
    COMMA           reduce using rule 50 (formulaAtomica -> expresion .)
    FUN             reduce using rule 50 (formulaAtomica -> expresion .)


state 23

    (51) formulaAtomica -> FALSE .
    AND             reduce using rule 51 (formulaAtomica -> FALSE .)
    OR              reduce using rule 51 (formulaAtomica -> FALSE .)
    IMP             reduce using rule 51 (formulaAtomica -> FALSE .)
    CHECK           reduce using rule 51 (formulaAtomica -> FALSE .)
    PRINT           reduce using rule 51 (formulaAtomica -> FALSE .)
    $end            reduce using rule 51 (formulaAtomica -> FALSE .)
    RPAREN          reduce using rule 51 (formulaAtomica -> FALSE .)
    BANG            reduce using rule 51 (formulaAtomica -> FALSE .)
    UPPERID         reduce using rule 51 (formulaAtomica -> FALSE .)
    LOWERID         reduce using rule 51 (formulaAtomica -> FALSE .)
    UNDERSCORE      reduce using rule 51 (formulaAtomica -> FALSE .)
    ARROW           reduce using rule 51 (formulaAtomica -> FALSE .)
    COMMA           reduce using rule 51 (formulaAtomica -> FALSE .)
    FUN             reduce using rule 51 (formulaAtomica -> FALSE .)


state 24

    (52) formulaAtomica -> TRUE .
    AND             reduce using rule 52 (formulaAtomica -> TRUE .)
    OR              reduce using rule 52 (formulaAtomica -> TRUE .)
    IMP             reduce using rule 52 (formulaAtomica -> TRUE .)
    CHECK           reduce using rule 52 (formulaAtomica -> TRUE .)
    PRINT           reduce using rule 52 (formulaAtomica -> TRUE .)
    $end            reduce using rule 52 (formulaAtomica -> TRUE .)
    RPAREN          reduce using rule 52 (formulaAtomica -> TRUE .)
    BANG            reduce using rule 52 (formulaAtomica -> TRUE .)
    UPPERID         reduce using rule 52 (formulaAtomica -> TRUE .)
    LOWERID         reduce using rule 52 (formulaAtomica -> TRUE .)
    UNDERSCORE      reduce using rule 52 (formulaAtomica -> TRUE .)
    ARROW           reduce using rule 52 (formulaAtomica -> TRUE .)
    COMMA           reduce using rule 52 (formulaAtomica -> TRUE .)
    FUN             reduce using rule 52 (formulaAtomica -> TRUE .)


state 25

    (33) expresion -> LOWERID . LPAREN expresiones RPAREN
    (36) expresion -> LOWERID .
    LPAREN          shift and go to state 37
    EQ              reduce using rule 36 (expresion -> LOWERID .)
    AND             reduce using rule 36 (expresion -> LOWERID .)
    OR              reduce using rule 36 (expresion -> LOWERID .)
    IMP             reduce using rule 36 (expresion -> LOWERID .)
    CHECK           reduce using rule 36 (expresion -> LOWERID .)
    PRINT           reduce using rule 36 (expresion -> LOWERID .)
    $end            reduce using rule 36 (expresion -> LOWERID .)
    RPAREN          reduce using rule 36 (expresion -> LOWERID .)
    BANG            reduce using rule 36 (expresion -> LOWERID .)
    UPPERID         reduce using rule 36 (expresion -> LOWERID .)
    LOWERID         reduce using rule 36 (expresion -> LOWERID .)
    UNDERSCORE      reduce using rule 36 (expresion -> LOWERID .)
    ARROW           reduce using rule 36 (expresion -> LOWERID .)
    COMMA           reduce using rule 36 (expresion -> LOWERID .)
    FUN             reduce using rule 36 (expresion -> LOWERID .)


state 26

    (34) expresion -> UPPERID . LPAREN expresiones RPAREN
    (35) expresion -> UPPERID .
    LPAREN          shift and go to state 38
    EQ              reduce using rule 35 (expresion -> UPPERID .)
    AND             reduce using rule 35 (expresion -> UPPERID .)
    OR              reduce using rule 35 (expresion -> UPPERID .)
    IMP             reduce using rule 35 (expresion -> UPPERID .)
    CHECK           reduce using rule 35 (expresion -> UPPERID .)
    PRINT           reduce using rule 35 (expresion -> UPPERID .)
    $end            reduce using rule 35 (expresion -> UPPERID .)
    RPAREN          reduce using rule 35 (expresion -> UPPERID .)
    BANG            reduce using rule 35 (expresion -> UPPERID .)
    UPPERID         reduce using rule 35 (expresion -> UPPERID .)
    LOWERID         reduce using rule 35 (expresion -> UPPERID .)
    UNDERSCORE      reduce using rule 35 (expresion -> UPPERID .)
    ARROW           reduce using rule 35 (expresion -> UPPERID .)
    COMMA           reduce using rule 35 (expresion -> UPPERID .)
    FUN             reduce using rule 35 (expresion -> UPPERID .)


state 27

    (5) declaracion -> FUN LOWERID signatura . precondicion postcondicion reglas
    (8) precondicion -> . QUESTION formulaImpOrAndNeg
    (9) precondicion -> . empty
    (2) empty -> .
    QUESTION        shift and go to state 40
    BANG            reduce using rule 2 (empty -> .)
    UPPERID         reduce using rule 2 (empty -> .)
    LOWERID         reduce using rule 2 (empty -> .)
    UNDERSCORE      reduce using rule 2 (empty -> .)
    ARROW           reduce using rule 2 (empty -> .)
    COMMA           reduce using rule 2 (empty -> .)
    FUN             reduce using rule 2 (empty -> .)
    CHECK           reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)

    precondicion                   shift and go to state 39
    empty                          shift and go to state 41

state 28

    (6) signatura -> empty .
    QUESTION        reduce using rule 6 (signatura -> empty .)
    BANG            reduce using rule 6 (signatura -> empty .)
    UPPERID         reduce using rule 6 (signatura -> empty .)
    LOWERID         reduce using rule 6 (signatura -> empty .)
    UNDERSCORE      reduce using rule 6 (signatura -> empty .)
    ARROW           reduce using rule 6 (signatura -> empty .)
    COMMA           reduce using rule 6 (signatura -> empty .)
    FUN             reduce using rule 6 (signatura -> empty .)
    CHECK           reduce using rule 6 (signatura -> empty .)
    PRINT           reduce using rule 6 (signatura -> empty .)
    $end            reduce using rule 6 (signatura -> empty .)


state 29

    (7) signatura -> COLON . parametros ARROW parametro
    (18) parametros -> . parametros COMMA parametros
    (19) parametros -> . parametro
    (20) parametros -> . empty
    (21) parametro -> . LOWERID
    (22) parametro -> . UNDERSCORE
    (2) empty -> .
    LOWERID         shift and go to state 45
    UNDERSCORE      shift and go to state 46
    ARROW           reduce using rule 2 (empty -> .)
    COMMA           reduce using rule 2 (empty -> .)

    parametros                     shift and go to state 42
    parametro                      shift and go to state 43
    empty                          shift and go to state 44

state 30

    (17) prnt -> PRINT expresion .
    PRINT           reduce using rule 17 (prnt -> PRINT expresion .)
    $end            reduce using rule 17 (prnt -> PRINT expresion .)


state 31

    (48) formulaImpOrAndNeg -> formulaOrAndNeg IMP . formulaImpOrAndNeg
    (47) formulaImpOrAndNeg -> . formulaOrAndNeg
    (48) formulaImpOrAndNeg -> . formulaOrAndNeg IMP formulaImpOrAndNeg
    (45) formulaOrAndNeg -> . formulaAndNeg
    (46) formulaOrAndNeg -> . formulaAndNeg OR formulaOrAndNeg
    (43) formulaAndNeg -> . formulaNeg AND formulaAndNeg
    (44) formulaAndNeg -> . formulaNeg
    (40) formulaNeg -> . LPAREN formulaImpOrAndNeg RPAREN
    (41) formulaNeg -> . NOT formulaNeg
    (42) formulaNeg -> . formulaAtomica
    (49) formulaAtomica -> . expresion EQ expresion
    (50) formulaAtomica -> . expresion
    (51) formulaAtomica -> . FALSE
    (52) formulaAtomica -> . TRUE
    (33) expresion -> . LOWERID LPAREN expresiones RPAREN
    (34) expresion -> . UPPERID LPAREN expresiones RPAREN
    (35) expresion -> . UPPERID
    (36) expresion -> . LOWERID
    LPAREN          shift and go to state 19
    NOT             shift and go to state 20
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    LOWERID         shift and go to state 25
    UPPERID         shift and go to state 26

    formulaOrAndNeg                shift and go to state 16
    formulaImpOrAndNeg             shift and go to state 47
    formulaAndNeg                  shift and go to state 17
    formulaNeg                     shift and go to state 18
    formulaAtomica                 shift and go to state 21
    expresion                      shift and go to state 22

state 32

    (46) formulaOrAndNeg -> formulaAndNeg OR . formulaOrAndNeg
    (45) formulaOrAndNeg -> . formulaAndNeg
    (46) formulaOrAndNeg -> . formulaAndNeg OR formulaOrAndNeg
    (43) formulaAndNeg -> . formulaNeg AND formulaAndNeg
    (44) formulaAndNeg -> . formulaNeg
    (40) formulaNeg -> . LPAREN formulaImpOrAndNeg RPAREN
    (41) formulaNeg -> . NOT formulaNeg
    (42) formulaNeg -> . formulaAtomica
    (49) formulaAtomica -> . expresion EQ expresion
    (50) formulaAtomica -> . expresion
    (51) formulaAtomica -> . FALSE
    (52) formulaAtomica -> . TRUE
    (33) expresion -> . LOWERID LPAREN expresiones RPAREN
    (34) expresion -> . UPPERID LPAREN expresiones RPAREN
    (35) expresion -> . UPPERID
    (36) expresion -> . LOWERID
    LPAREN          shift and go to state 19
    NOT             shift and go to state 20
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    LOWERID         shift and go to state 25
    UPPERID         shift and go to state 26

    formulaAndNeg                  shift and go to state 17
    formulaOrAndNeg                shift and go to state 48
    formulaNeg                     shift and go to state 18
    formulaAtomica                 shift and go to state 21
    expresion                      shift and go to state 22

state 33

    (43) formulaAndNeg -> formulaNeg AND . formulaAndNeg
    (43) formulaAndNeg -> . formulaNeg AND formulaAndNeg
    (44) formulaAndNeg -> . formulaNeg
    (40) formulaNeg -> . LPAREN formulaImpOrAndNeg RPAREN
    (41) formulaNeg -> . NOT formulaNeg
    (42) formulaNeg -> . formulaAtomica
    (49) formulaAtomica -> . expresion EQ expresion
    (50) formulaAtomica -> . expresion
    (51) formulaAtomica -> . FALSE
    (52) formulaAtomica -> . TRUE
    (33) expresion -> . LOWERID LPAREN expresiones RPAREN
    (34) expresion -> . UPPERID LPAREN expresiones RPAREN
    (35) expresion -> . UPPERID
    (36) expresion -> . LOWERID
    LPAREN          shift and go to state 19
    NOT             shift and go to state 20
    FALSE           shift and go to state 23
    TRUE            shift and go to state 24
    LOWERID         shift and go to state 25
    UPPERID         shift and go to state 26

    formulaNeg                     shift and go to state 18
    formulaAndNeg                  shift and go to state 49
    formulaAtomica                 shift and go to state 21
    expresion                      shift and go to state 22

state 34

    (40) formulaNeg -> LPAREN formulaImpOrAndNeg . RPAREN
    RPAREN          shift and go to state 50


state 35

    (41) formulaNeg -> NOT formulaNeg .
    AND             reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    OR              reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    IMP             reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    CHECK           reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    PRINT           reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    $end            reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    RPAREN          reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    BANG            reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    UPPERID         reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    LOWERID         reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    UNDERSCORE      reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    ARROW           reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    COMMA           reduce using rule 41 (formulaNeg -> NOT formulaNeg .)
    FUN             reduce using rule 41 (formulaNeg -> NOT formulaNeg .)


state 36

    (49) formulaAtomica -> expresion EQ . expresion
    (33) expresion -> . LOWERID LPAREN expresiones RPAREN
    (34) expresion -> . UPPERID LPAREN expresiones RPAREN
    (35) expresion -> . UPPERID
    (36) expresion -> . LOWERID
    LOWERID         shift and go to state 25
    UPPERID         shift and go to state 26

    expresion                      shift and go to state 51

state 37

    (33) expresion -> LOWERID LPAREN . expresiones RPAREN
    (37) expresiones -> . expresiones COMMA expresiones
    (38) expresiones -> . expresion
    (39) expresiones -> . empty
    (33) expresion -> . LOWERID LPAREN expresiones RPAREN
    (34) expresion -> . UPPERID LPAREN expresiones RPAREN
    (35) expresion -> . UPPERID
    (36) expresion -> . LOWERID
    (2) empty -> .
    LOWERID         shift and go to state 25
    UPPERID         shift and go to state 26
    RPAREN          reduce using rule 2 (empty -> .)
    COMMA           reduce using rule 2 (empty -> .)

    expresiones                    shift and go to state 52
    expresion                      shift and go to state 53
    empty                          shift and go to state 54

state 38

    (34) expresion -> UPPERID LPAREN . expresiones RPAREN
    (37) expresiones -> . expresiones COMMA expresiones
    (38) expresiones -> . expresion
    (39) expresiones -> . empty
    (33) expresion -> . LOWERID LPAREN expresiones RPAREN
    (34) expresion -> . UPPERID LPAREN expresiones RPAREN
    (35) expresion -> . UPPERID
    (36) expresion -> . LOWERID
    (2) empty -> .
    LOWERID         shift and go to state 25
    UPPERID         shift and go to state 26
    RPAREN          reduce using rule 2 (empty -> .)
    COMMA           reduce using rule 2 (empty -> .)
